# AutoRAI

./: README.md  implementation_plan.md
code/: code_structure.md  pyproject.toml  run_ie.py
code/ie/: __init__.py  config.py
code/ie/adapters/: __init__.py
code/ie/adapters/mds_mimic/: __init__.py  base_adapter.py  section_i_adapter.py  section_n_adapter.py  section_o_adapter.py
code/ie/adapters/mds_mimic/mappings/: drug_class_keywords.json  icd_to_section_i.json  procedure_to_section_o.json
code/ie/adapters/mds_mimic/prompts/: extraction_prompt.txt
code/ie/core/: __init__.py  fusion.py  interfaces.py  llm_client.py  models.py  orchestrator.py  structured_pipeline.py  unstructured_pipeline.py
project_structure/: mds_system_architecture.md  mimic_adapter_spec_sections_I_N_O.md
